--- a/box.css
+++ b/box.css
@@ -1,3 +1,9 @@
+:root{
+  --bg_color_gradient: linear-gradient(#141e30, #243b55);
+  --fluorescent-blue: #03e9f4;
+  --white: #fff;
+}
+
 html {
   height: 100%;
 }
@@ -5,7 +11,7 @@ body {
   margin:0;
   padding:0;
   font-family: sans-serif;
-  background: linear-gradient(#141e30, #243b55);
+  background: var(--bg_color_gradient);
 }
 
 .info-box {
@@ -15,7 +21,7 @@ body {
   width: 400px;
   padding: 40px;
   transform: translate(-50%, -50%);
-  background: rgba(0,0,0,.5);
+  background: var(--black-medium-brightness);
   box-sizing: border-box;
   box-shadow: 0 15px 25px rgba(0,0,0,.6);
   border-radius: 10px;
@@ -24,7 +30,7 @@ body {
 .info-box h2 {
   margin: 0 0 30px;
   padding: 0;
-  color: #fff;
+  color: var(--white);
   text-align: center;
 }
 
@@ -32,24 +38,25 @@ body {
   position: relative;
 }
 
-.info-box .user-box input {
+/* .info-box .user-box input {
   width: 100%;
   padding: 10px 0;
   font-size: 16px;
-  color: #fff;
+  color: var(--white);
   margin-bottom: 30px;
   border: none;
-  border-bottom: 1px solid #fff;
+  border-bottom: 1px solid var(--white);
   outline: none;
   background: transparent;
-}
+} */
+
 .info-box .user-box label {
   position: absolute;
   top:0;
   left: 0;
   padding: 10px 0;
   font-size: 16px;
-  color: #fff;
+  color: var(--white);
   pointer-events: none;
   transition: .5s;
 }
@@ -58,7 +65,7 @@ body {
 .info-box .user-box input:valid ~ label {
   top: -20px;
   left: 0;
-  color: #03e9f4;
+  color: var(--fluorescent-blue);
   font-size: 12px;
 }
 
@@ -66,7 +73,7 @@ body {
   position: relative;
   display: inline-block;
   padding: 10px 20px;
-  color: #03e9f4;
+  color: var(--fluorescent-blue);
   font-size: 16px;
   text-decoration: none;
   text-transform: uppercase;
@@ -77,13 +84,13 @@ body {
 }
 
 .info-box a:hover {
-  background: #03e9f4;
-  color: #fff;
+  background: var(--fluorescent-blue);
+  color: var(--white);
   border-radius: 5px;
-  box-shadow: 0 0 5px #03e9f4,
-              0 0 25px #03e9f4,
-              0 0 50px #03e9f4,
-              0 0 100px #03e9f4;
+  box-shadow: 0 0 5px var(--fluorescent-blue),
+              0 0 25px var(--fluorescent-blue),
+              0 0 50px var(--fluorescent-blue),
+              0 0 100px var(--fluorescent-blue);
 }
 
 .info-box a span {
@@ -96,7 +103,7 @@ body {
   left: -100%;
   width: 100%;
   height: 2px;
-  background: linear-gradient(90deg, transparent, #03e9f4);
+  background: linear-gradient(90deg, transparent, var(--fluorescent-blue));
   animation: btn-anim1 1s linear infinite;
 }
 
@@ -114,7 +121,7 @@ body {
   right: 0;
   width: 2px;
   height: 100%;
-  background: linear-gradient(180deg, transparent, #03e9f4);
+  background: linear-gradient(180deg, transparent, var(--fluorescent-blue));
   animation: btn-anim2 1s linear infinite;
   animation-delay: .25s
 }
@@ -133,7 +140,7 @@ body {
   right: -100%;
   width: 100%;
   height: 2px;
-  background: linear-gradient(270deg, transparent, #03e9f4);
+  background: linear-gradient(270deg, transparent, var(--fluorescent-blue));
   animation: btn-anim3 1s linear infinite;
   animation-delay: .5s
 }
@@ -152,7 +159,7 @@ body {
   left: 0;
   width: 2px;
   height: 100%;
-  background: linear-gradient(360deg, transparent, #03e9f4);
+  background: linear-gradient(360deg, transparent, var(--fluorescent-blue));
   animation: btn-anim4 1s linear infinite;
   animation-delay: .75s
 }
