--- a/ruler.css
+++ b/ruler.css
@@ -1,3 +1,6 @@
+:root{
+  --black-medium-brightness: rgba(0, 0, 0, .5);
+}
 body {
   margin: 0;
   padding: 0;
@@ -24,23 +27,22 @@ body {
   left: 0;
   width: 45px;
   height: 100%;
-  /* background:rgba(0,0,0,.5); */
+  /* background:var(--black-medium-brightness); */
   border-radius: 3px;
   overflow: hidden;
-  transform: rotate(180deg);
-  box-shadow:0 5px 15px rgba(0,0,0,.5);
+  /* transform: rotate(180deg); */
+  box-shadow:0 5px 15px var(--black-medium-brightness);
 }
 
 .ruler:before {
   /* background: linear-gradient(#141e30, #243b55); */
-  background: rgba(0,0,0,.5);
+  background: var(--black-medium-brightness);
   content: '';
   position: absolute;
   top: 0;
-  right: 0;
+  left: 0;
   width: 45%;
   height: 100%;
-  /* filter:blur(20px); */
   /* background-color: #d3b056; */
 }
 
@@ -60,16 +62,22 @@ ul {
   padding: 0;
   margin: 0;
   position: absolute;
+  right: 0;
 }
 
 ul li {
   width: 14px;
   margin-bottom: 3px;
-  border-bottom: 2px solid rgb(255, 255, 255);
+  border-bottom: 2px solid var(--white);
 }
 
-ul li:nth-child(5n) {
+ul li:nth-child(6n) {
   width: 21px;
+  border-bottom: 2px solid var(--white);
+}
+ul li:nth-child(1) {
+  width: 21px;
+  border-bottom: 2px solid var(--white);
 }
 
 .ruler ul {
