--- a/box.css
+++ b/box.css
@@ -17,7 +17,7 @@ body {
 .info-box {
   position: absolute;
   top: 50%;
-  left: 175%;
+  left: 200%;
   width: 400px;
   padding: 40px;
   transform: translate(-50%, -50%);
@@ -27,7 +27,26 @@ body {
   border-radius: 10px;
 }
 
+.modified-info-box {
+  position: absolute;
+  top: 50%;
+  left: -100%;
+  width: 400px;
+  padding: 40px;
+  background: rgba(255, 255, 255, 0);
+  box-sizing: border-box;
+  box-shadow: none;
+  border-radius: 10px;
+}
+
 .info-box h2 {
+  margin: 0 0 30px;
+  padding: 0;
+  color: var(--white);
+  text-align: center;
+}
+
+.info-box p {
   margin: 0 0 30px;
   padding: 0;
   color: var(--white);
